# VigiWheels

./: README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: VigiWheels_Fire_Detection.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 1.snap  28.snap
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.remote.console/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
general/: debugging_help.md  how_to_use.md  software_development_tips.md
general/hardware/: hardware_architecture.drawio
general/software/can/: can_description.md
general/software/ros_environment/: software_architecture.drawio
jetsonNano/: initial_configuration.md
jetsonNano/ros2_ws/: how_to_compile.md
jetsonNano/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
jetsonNano/ros2_ws/log/: latest_build  latest_list
jetsonNano/servers/: server_level_docker.py  server_manodetection_docker.py
nucleoF103/documentation/software/: software_description.md
nucleoF103/firmware/: .cproject  .project  F103 Debug.launch  F103.ioc
nucleoF103/firmware/.metadata/: .log4j.xml  version.ini
nucleoF103/firmware/Debug/: F103.elf  F103.list  F103.map  makefile  objects.list
nucleoF103/firmware/Inc/: calibrate.h  can.h  control.h  main.h  steering.h  stm32f1xx_it.h  timer.h  wheels.h
nucleoF103/firmware/Src/: FLASH_PAGE_F1.c  calibrate.c  can.c  control.c  gpio.c  main.c  steering.c  stm32f1xx_it.c  tim.c  timer.c  wheels.c
nucleoF103/test_PWM/AAA/: .cproject  .mxproject  .project  AAA Debug.launch  AAA.ioc
nucleoL476/: README.md  initial_configuration.md
nucleoL476/firmware/: .cproject  .project  L476.ioc  L476.launch
nucleoL476/firmware/Debug/: L476.elf  L476.list  L476.map  makefile  objects.list  sources.mk
nucleoL476Fire/: .project
nucleoL476Fire/.metadata/: .log4j2.xml  version.ini
nucleoL476Fire/firmware/: .cproject  .mxproject  .project  VigiWheels_Fire_Detection Debug.launch  VigiWheels_Fire_Detection.ioc  VigiWheels_Fire_Detection.txt
nucleoL476Fire/firmware/.metadata/: .log4j2.xml  version.ini
nucleoL476Fire/firmware/Debug/: makefile  sources.mk  (+4 more)
raspberryPI3/: initial_configuration.md
raspberryPI3/configuration_files/: 50-cloud-init.yaml  99_config.yaml  before.rules  config.txt  dhcpd.conf
raspberryPI3/install/: local_setup.sh  setup.sh
raspberryPI3/log/: latest_build
raspberryPI3/path_demo/: demo_cam.txt  demo_car.txt
raspberryPI3/ros2_ws/: how_to_compile.md
raspberryPI3/ros2_ws/src/car_control/: CMakeLists.txt
raspberryPI3/ros2_ws/src/car_control/include/car_control/: car_control_node.h  controlCmd.h  propulsionCmd.h  steeringCmd.h
raspberryPI3/ros2_ws/src/car_control/src/: car_control_node.cpp  controlCmd.cpp  control_command.cpp  propulsionCmd.cpp  steeringCmd.cpp
raspberryPI3/ros2_ws/src/car_control/src/log/: latest_build
raspberryPI3/ros2_ws/src/fire_detection/: CMakeLists.txt  package.xml
raspberryPI3/ros2_ws/src/fire_detection/src/: processing_data_fire.cpp  serial_reading.cpp  serial_writing.cpp
raspberryPI3/ros2_ws/src/uart/: CMakeLists.txt
raspberryPI3/ros2_ws/src/uart/src/: serial_reading.cpp  serial_writing.cpp
simulation/: README.md
website/: autonomous.html  emergency.html  home.html  index.html  manual.html  old.html  ros-script.js  scripts.js  security.html  styles.css  tracking.html
(+678 files in other folders)
